--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -1,14 +1,4 @@
-<html>
-  <style>
-    body{ 
-      font-size: 15pt;
-      font-family: arial;
-    }
-  </style>
-
-
-<body>
-  <h1>Some famous Computer Scientists</h1>
+<!--   <h1>Some famous Computer Scientists</h1>
   <div>{{data}}</div>
 
   <div>
@@ -16,14 +6,14 @@
     <div>{{n}}</div>
     {% endfor %}
   </div>
+ -->
+{% extends "layout.html" %}
+{% block body %} 
 
 <p><a href="another.html">Go to the other page</a></p>
 
-<form method="POST" action="/add">
+{% endblock %}
+<!-- <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
-
-</body>
-
-
-</html>
+ -->
