--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -7,12 +7,21 @@
     {% endfor %}
   </div>
  -->
+
 {% extends "layout.html" %}
 {% block body %} 
 
-<p><a href="another.html">Go to the other page</a></p>
+<div class="ui top fixed menu">
+  <div class="item">
+    <img src="static/img/logo.png">
+  </div>
+  <a class="item">Find Restaurants</a>
+  <a class="item">Find Events</a>
+  <a class="item">Log in / Sign up</a>
+</div>
 
 {% endblock %}
+
 <!-- <form method="POST" action="/add">
 <p>Name of new computer scientist: <input type="text" name="name"> <input type="submit" value="Add"></p>
 </form>
