--- a/Web/templates/layout.html
+++ b/Web/templates/layout.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="static/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/semantic.min.css">
     <title>Food Finder</title>
 </head>
 <body>
@@ -9,5 +9,5 @@
 {% endblock %}
 </body>
 <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
-<script src="static/semantic.min.js"></script>
+<script src="static/js/semantic.min.js"></script>
 </html>
