--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -15,10 +15,13 @@
   <div class="item">
     <img src="static/img/logo.png">
   </div>
-  <a class="item">Find Restaurants</a>
-  <a class="item">Find Events</a>
-  <a class="item">Log in / Sign up</a>
+  <a class="item" href="/restaurant">Find Restaurants</a>
+  <a class="item" href="/event">Find Events</a>
+  <a class="item" href="/login">Log in / Sign up</a>
 </div>
+<video autoplay loop class="videoWrapper">
+    <source src="static/img/background.mp4" type="video/mp4">
+</video>
 
 {% endblock %}
 
