--- a/Web/templates/layout.html
+++ b/Web/templates/layout.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="static/css/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <title>Food Finder</title>
 </head>
 <body>
