Finish login & signup page

--- a/Web/templates/login.html
+++ b/Web/templates/login.html
@@ -61,7 +61,7 @@ $(document)
         Log-in to your account
       </div>
     </h2>
-    <form class="ui large form" method="POST" action="user_check">
+    <form class="ui large form" method="POST" action="login">
       <div class="ui stacked segment">
         <div class="field">
           <div class="ui left icon input">
@@ -71,7 +71,7 @@ $(document)
         </div>
         <div class="field">
           <div class="ui left icon input">
-            <i class="lock icon"></i>
+            <i class="mail icon"></i>
             <input type="text" name="email" placeholder="Email Address">
           </div>
         </div>
