--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -11,10 +11,11 @@
 {% extends "layout.html" %}
 {% block body %} 
 
-<div class="ui top fixed menu">
+<div class="ui pointing top fixed menu">
   <div class="item">
     <img src="static/img/logo.png">
   </div>
+  <a class="active item">Foodie Home</a>
   <a class="item" href="/restaurant">Find Restaurants</a>
   <a class="item" href="/event">Find Events</a>
   <a class="item" href="/login">Log in / Sign up</a>
