--- a/Web/templates/layout.html
+++ b/Web/templates/layout.html
@@ -21,14 +21,15 @@
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/components/list.css">
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/components/message.css">
 	<link rel="stylesheet" type="text/css" href="static/semantic/dist/components/icon.css">
-
+	
+  	<script src="static/semantic/dist/jquery.min.js"></script>
+    
     <title>Foodie</title>
 </head>
 <body>
 {% block body %}
 {% endblock %}
 </body>
-<script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 <script src="static/semantic/dist/semantic.min.js"></script>
 <script src="static/semantic/dist/components/form.js"></script>
 <script src="static/semantic/dist/components/transition.js"></script>
