--- a/Web/templates/sign_up.html
+++ b/Web/templates/sign_up.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block body %} 
+
 <style type="text/css">
   body {
     background-color: #DADADA;
@@ -64,7 +65,7 @@ $(document)
         Sign up for your account
       </div>
     </h2>
-    <form class="ui large form" method="POST" action="user_check">
+    <form class="ui large form" method="POST" action="sign_up">
       <div class="ui stacked segment">
         <div class="field">
           <div class="ui left icon input">
