--- a/Web/templates/sign_up.html
+++ b/Web/templates/sign_up.html
@@ -1,20 +1,6 @@
 {% extends "layout.html" %}
 {% block body %} 
-
-<style type="text/css">
-  body {
-    background-color: #DADADA;
-  }
-  body > .grid {
-    height: 100%;
-  }
-  .image {
-    margin-top: -100px;
-  }
-  .column {
-    max-width: 450px;
-  }
-</style>
+<link rel="stylesheet" type="text/css" href="static/css/form.css">  
 <script>
 $(document)
   .ready(function() {
