--- a/Web/templates/create_event.html
+++ b/Web/templates/create_event.html
@@ -1,6 +1,50 @@
 {% extends "layout.html" %}
 {% block body %} 
 
+<link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+<link href="static/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+<div class="container">
+        <fieldset>
+            <form method="POST" action="create_event">
+                <legend>Create Event</legend>
+                <label class="control-label">Event Name</label>
+                <div class="controls input-append" style="height: 30px;">
+                    <input size="16" type="text" name="event_name" value="" style="height: 30px;">
+                </div>
+                <br><br>
+                <div class="control-group">
+                    <label class="control-label">Event Time</label>
+                    <div class="controls input-append date form_datetime" style="height: 30px;" data-date="" data-date-format="mm/dd/yyyy - hh:ii" data-link-field="dtp_input1">
+                        <input size="16" type="text" name="event_time" value="" style="height: 30px;" readonly>
+                        <span class="add-on" style="height: 30px;"><i class="icon-remove"></i></span>
+                        <span class="add-on" style="height: 30px;"><i class="icon-th"></i></span>
+                    </div>
+                    <input type="hidden" id="dtp_input1" value="" /><br/>
+                </div>
+                <label class="control-label">Event Desciption</label>
+                <div class="controls input-append">
+    	            <textarea size="16" name="event_desc" class="field span8" rows="10"></textarea>
+                </div>
+                <br><br>
+            	<button class="large ui olive submit button">
+                    Create Event!
+                </button>
+            </form>
+        </fieldset>
+</div>
 
-
+<script type="text/javascript" src="static/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
+<script type="text/javascript" src="static/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="static/bootstrap/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+<script type="text/javascript">
+    $('.form_datetime').datetimepicker({
+        weekStart: 1,
+        todayBtn:  1,
+        autoclose: 1,
+        todayHighlight: 1,
+        startView: 2,
+        forceParse: 0,
+        showMeridian: 1
+    });
+</script>
 {% endblock %}
