--- a/Web/templates/index.html
+++ b/Web/templates/index.html
@@ -13,7 +13,9 @@
       Welcome to Foodie!
     {% endif %}
   </h1>
-  <h2 class="ui large header">Find the best place for your event!</h2>
+  <h2 class="ui large header">
+    Find the best place for your event!
+  </h2>
 </div>
 
 {% endblock %}
