Modify some css & add DBUtil

--- a/Web/templates/layout.html
+++ b/Web/templates/layout.html
@@ -27,7 +27,7 @@
   <title>Foodie</title>
 </head>
 <body>
-<div class="ui pointing top menu">
+<div class="ui fixed pointing top menu">
   <div class="item">
     <img src="static/img/logo.png">
   </div>
