--- a/Web/templates/restaurant.html
+++ b/Web/templates/restaurant.html
@@ -1,6 +1,52 @@
 {% extends "layout.html" %}
 {% block body %} 
+<script type="text/javascript">
+$(document)
+  .ready(function() {
+    $('.ui.selection.dropdown')
+        .dropdown()
+    ;
+  })
+;
+</script>
 
-<p>This is restaurant page.</p>
+<article>
+	<form method="POST" action="find_restaurants">
+		<h2 class="ui teal header">
+			Choose Feature
+		</h2>
+		<div class="ui teal selection dropdown">
+			<input type="hidden" name="feature_id">
+				<i class="dropdown icon"></i>
+				<div class="default text">Udecided</div>
+				<div class="menu">
+					{% for feature_dict in features %}
+				  		<div class="item" data-value="{{feature_dict['id']}}">
+				  			{{feature_dict["name"]}}
+				  		</div>
+				  	{% endfor %}
+				</div>
+		</div>
+		<h2 class="ui teal header">
+			Choose Region
+		</h2>
+		<div class="ui teal selection dropdown">
+			<input type="hidden" name="zipcode">
+				<i class="dropdown icon"></i>
+				<div class="default text">Udecided</div>
+				<div class="menu">
+					{% for region_dict in regions %}
+				  		<div class="item" data-value="{{region_dict['zipcode']}}">
+				  			{{region_dict["zipcode"]}}
+				  		</div>
+				  	{% endfor %}
+				</div>
+		</div>
+		<br><br><br>
+		<button class="ui massive teal submit button">
+			Search Restaurants!
+		</button>	
+	</form>
+</article>
 
 {% endblock %}
