--- a/Web/templates/user_events.html
+++ b/Web/templates/user_events.html
@@ -70,10 +70,16 @@
 </table>
 <br><br>
 <form action="/create_event" method="get">
-  <button class="ui primary button">
+  <button class="ui left floated large primary button">
     Create Event!
   </button>
 </form>
+<form action="/browse_event" method="get">
+  <button class="ui left floated large primary button">
+    See Other Events
+  </button>
+</form>
+
 <!-- TODO(Chris): Add Find some events to join (user doesn't join) 
                   button => link to all the events => choose event to join -->
 </article>
