Change the title of event may like

--- a/Web/templates/other_events.html
+++ b/Web/templates/other_events.html
@@ -3,7 +3,7 @@
 
 <article>
 <h2 class="ui header">
-  Event May Like
+  Events You May Like
 </h2>
 <table class="ui celled padded table">
   <thead>
