--- a/Web/templates/layout.html
+++ b/Web/templates/layout.html
@@ -33,7 +33,9 @@
   </div>
   <a class="item" id="home" href="/">Foodie Home</a>
   <a class="item" id="restaurant" href="/restaurant">Find Restaurants</a>
-  <a class="item" id="event" href="/event">Find Events</a>
+  {% if request.cookies.get("user_id") %}
+    <a class="item" id="event" href="/event">Find Events</a>
+  {% endif %}
   <a class="item" id="login" href="/login">Log in / Sign up</a>
 </div>
 <script type="text/javascript">
