--- a/Web/templates/test_semantic.html
+++ b/Web/templates/test_semantic.html
@@ -7,8 +7,189 @@
 </div>
 {% endblock %} -->
 
-
 <!DOCTYPE html>
+<html>
+<head>
+  <!-- Standard Meta -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
+  <!-- Site Properties -->
+  <title>Login Example - Semantic</title>
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
+
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/header.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/image.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/menu.css">
+
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/divider.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/segment.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/form.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/input.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/button.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/list.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/message.css">
+  <link rel="stylesheet" type="text/css" href="semantic/dist/components/icon.css">
+
+  <link rel="stylesheet" type="text/css" href="semantic/dist/bootstrap-datetimepicker.min.css">
+
+
+  <script src="semantic/dist/bootstrap-datetimepicker.min.js"></script>
+  <script src="semantic/dist/jquery.min.js"></script>
+  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="semantic/dist/semantic.js"></script>
+
+  <script src="semantic/dist/components/form.js"></script>
+  <script src="semantic/dist/components/transition.js"></script>
+
+  <style type="text/css">
+    body {
+      background-color: #DADADA;
+    }
+    body > .grid {
+      height: 100%;
+    }
+    .image {
+      margin-top: -100px;
+    }
+    .column {
+      max-width: 450px;
+    }
+  </style>
+  <script>
+  // $(document)
+  //   .ready(function() {
+  //     $('#select')
+  //       .dropdown()
+  //     ;
+  //     $('.ui.selection.dropdown')
+  //       .dropdown()
+  //     ;
+  //     $('.ui.form')
+  //       .form({
+  //         fields: {
+  //           email: {
+  //             identifier  : 'email',
+  //             rules: [
+  //               {
+  //                 type   : 'empty',
+  //                 prompt : 'Please enter your e-mail'
+  //               },
+  //               {
+  //                 type   : 'email',
+  //                 prompt : 'Please enter a valid e-mail'
+  //               }
+  //             ]
+  //           },
+  //           password: {
+  //             identifier  : 'password',
+  //             rules: [
+  //               {
+  //                 type   : 'empty',
+  //                 prompt : 'Please enter your password'
+  //               },
+  //               {
+  //                 type   : 'length[6]',
+  //                 prompt : 'Your password must be at least 6 characters'
+  //               }
+  //             ]
+  //           }
+  //         }
+  //       })
+  //     ;
+  //   })
+  // ;
+  </script>
+</head>
+<body>
+
+<div class="well">
+  <div id="datetimepicker1" class="input-append date">
+    <input data-format="dd/MM/yyyy hh:mm:ss" type="text"></input>
+    <span class="add-on">
+      <i data-time-icon="icon-time" data-date-icon="icon-calendar">
+      </i>
+    </span>
+  </div>
+</div>
+<script type="text/javascript">
+  $(function() {
+    $('#datetimepicker1').datetimepicker({
+      language: 'pt-BR'
+    });
+  });
+</script>
+
+<!-- <div class="ui selection dropdown">
+  <input type="hidden" name="gender">
+  <i class="dropdown icon"></i>
+  <div class="default text">Gender</div>
+  <div class="menu">
+    <div class="item" data-value="male">Male</div>
+    <div class="item" data-value="female">Female</div>
+  </div>
+</div>
+
+<select name="gender" class="ui dropdown" id="select">
+  <option value="">Gender</option>
+  <option value="male">Male</option>
+  <option value="female">Female</option>
+</select> -->
+<!-- 	<i class="child icon"></i>
+	<i class="doctor icon"></i>
+	<i class="handicap icon"></i>
+	<i class="spy icon"></i>
+	<i class="student icon"></i>
+	<i class="user icon"></i>
+	<i class="users icon"></i> -->
+
+
+<!-- <div class="ui middle aligned center aligned grid">
+  <div class="column">
+    <h2 class="ui teal image header">
+      <img src="assets/images/logo.png" class="image">
+      <div class="content">
+        Log-in to your account
+      </div>
+    </h2>
+    <form class="ui large form">
+      <div class="ui stacked segment">
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="user icon"></i>
+            <input type="text" name="email" placeholder="E-mail address">
+          </div>
+        </div>
+        <div class="field">
+          <div class="ui left icon input">
+            <i class="lock icon"></i>
+            <input type="password" name="password" placeholder="Password">
+          </div>
+        </div>
+        <div class="ui fluid large teal submit button">Login</div>
+      </div>
+
+      <div class="ui error message"></div>
+
+    </form>
+
+    <div class="ui message">
+      New to us? <a href="#">Sign Up</a>
+    </div>
+  </div>
+</div> -->
+
+</body>
+</html>
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
@@ -27,5 +208,5 @@
 <script src="https://code.jquery.com/jquery-2.2.2.min.js" integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI=" crossorigin="anonymous"></script>
 <script src="semantic/dist/semantic.min.js"></script>
 </body>
-</html>
+</html> -->
 
