Error handling for event name too long

--- a/Web/templates/event.html
+++ b/Web/templates/event.html
@@ -11,7 +11,7 @@
   function search_restaurants() { 
     $.ajax({
       type: "POST",
-      url: "/find_restaurants",
+      url: "/find_restaurants_api",
       data: {
         sketch: canvasData
       }
