--- a/Web/templates/create_event.html
+++ b/Web/templates/create_event.html
@@ -1,16 +1,39 @@
 {% extends "layout.html" %}
 {% block body %} 
 
+<script type="text/javascript">
+    $(document)
+      .ready(function() {
+        $('form')
+          .form({
+            fields: {
+              event_name: {
+                identifier  : 'event_name',
+                rules: [
+                  {
+                    type   : 'length[20]',
+                    prompt : 'Your event_name must be under 20 characters'
+                  }
+                ]
+              }
+            }
+          })
+        ;
+      })
+    ;
+</script>
+
 <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="static/bootstrap/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
     <article>
         <div class="container">
             <fieldset>
-                <form method="POST" action="create_event">
+                <form method="POST" action="create_event" role="form" data-toggle="validator">
                     <legend>Create Event</legend>
                     <label class="control-label">Event Name</label>
                     <div class="controls input-append" style="height: 30px;">
-                        <input size="16" type="text" name="event_name" value="" style="height: 30px;">
+                        <input size="16" type="text" data-maxlength="20" name="event_name" value="" style="height: 30px;">
+                        <div class="help-block">Maximum of 20 characters</div>
                     </div>
                     <br><br>
                     <div class="control-group">
@@ -37,6 +60,7 @@
 
 <script type="text/javascript" src="static/jquery/jquery-1.8.3.min.js" charset="UTF-8"></script>
 <script type="text/javascript" src="static/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="static/bootstrap/js/validator.js"></script>
 <script type="text/javascript" src="static/bootstrap/js/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 <script type="text/javascript">
     $('.form_datetime').datetimepicker({
