--- a/Web/templates/user_events.html
+++ b/Web/templates/user_events.html
@@ -54,9 +54,9 @@
     <tr>
       <td>
         <h2 class="ui center aligned header">
-          <!-- <a href="/ecent?event_id={{event_dict['id']}}&amp;owner"> -->
+          <a href="/event?event_id={{event_dict['id']}}&amp;event_owner=participant">
             {{ event_dict["name"] }}
-          <!-- </a> -->
+          </a>
         </h2>
       </td>
       <td class="left aligned">
