--- a/Web/templates/event.html
+++ b/Web/templates/event.html
@@ -13,7 +13,7 @@
       type: "POST",
       url: "/find_restaurants_api",
       data: {
-        sketch: canvasData
+        feature_id: canvasData
       }
     }).done(function(res) {
       console.log(res);
